# empty-project

./: .gitignore  ChangeLog.md  README.md  ascii-vid-generator.cabal  hie.yaml  project-cis5520.cabal  stack.yaml
.devcontainer/: Dockerfile  devcontainer.json
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: ChessGame.hs  ChessParser.hs  ChessStepper.hs  ChessSyntax.hs  Editor.hs  Execute.hs  Graph.hs  GridMap.hs  ImageIO.hs  Lib.hs  LuEvaluator.hs  LuParser.hs  LuStepper.hs  LuSyntax.hs  LuTypeChecker.hs  LuTypes.hs  Main.hs  Maze.hs  OldPlayer.hs  Parser.hs  Player.hs  RedBlackGADT3.hs  State.hs  StatementParser.hs  TerminalPrinter.hs  Types.hs  Variables.hs  VideoToImage.hs  basic_concurrency_database.hs
test/: GameTests.hs  ImageIOTest.hs  LuEvaluatorTest.hs  LuParserTest.hs  LuStepperTest.hs  ParserTests.hs  Spec.hs  TestParser.hs  VideoToImageTest.hs
test/lu/: abs.lu  bfs.lu  exp.lu  fact.lu  repeat.lu  table.lu  test.lu  times.lu
